# ssb-arbmark-fagfunksjoner

./: .cookiecutter.json  .cruft.json  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  noxfile.py  noxfile.py.rej  pyproject.toml  pyproject.toml.rej  sonar-project.properties
.github/: dependabot.yml  labels.yml  release-drafter.yml
.github/workflows/: constraints.txt  constraints.txt.rej  docs.yml  docs.yml.rej  labeler.yml  release.yml  release.yml.rej  tests.yml  tests.yml.rej
docs/: arbmark.functions.rst  arbmark.groups.rst  arbmark.rst  conf.py  conf.py.rej  index.md  modules.rst  reference.md  ssb_arbmark_fagfunksjoner.rst
formats/: create_formats.py
src/arbmark/: __init__.py
src/arbmark/functions/: __init__.py  aggregation.py  categorize_ranges.py  files.py  interval.py  memory.py  merge.py  quarter.py  reference.py  statbank_formats.py  workdays.py
src/arbmark/groups/: __init__.py  age.py  company_size.py  country_origin.py  koble_landbakgrunn.py  nace.py  occupation.py  region.py  sector.py  shift_work.py
src/ssb_arbmark_fagfunksjoner/: __init__.py  __main__.py  functions.py  groups.py
tests/: __init__.py  test_age.py  test_aggregation.py  test_categorize_ranges.py  test_company_size.py  test_country_origin.py  test_files.py  test_functions.py  test_groups.py  test_interval.py  test_list_dataframes.py  test_main.py  test_main.py.rej  test_merge.py  test_nace.py  test_occupation.py  test_quarter.py  test_reference.py  test_region.py  test_sector.py  test_shift_work.py  test_statbank_formats.py  test_workdays.py
